
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int error (char*) ;
 int execve (char*,char**,char**) ;

void gomu_gomu_nooooo_gatling_shell(void)
{
      char *argv[] = { "/bin/sh", "--noprofile", "--norc", ((void*)0) };
      char *envp[] = { "TERM=linux", "PS1=blackbird\\$  ", "BASH_HISTORY=/dev/null",
                   "HISTORY=/dev/null", "history=/dev/null",
                   "PATH=/bin:/sbin:/usr/bin:/usr/sbin:/usr/local/bin:/usr/local/sbin", ((void*)0) };

      execve("/bin/sh", argv, envp);
      error("hheeeehhh! unable to spawn a sh");
}
